feat: Criando botão de Like

--- a/src/app/like-widget/like-widget.component.html
+++ b/src/app/like-widget/like-widget.component.html
@@ -4,7 +4,7 @@
   <fa-icon>
     [icon]="fonts.faThumbsUp"
   </fa-icon>
-  <span class="=like-couter">
+  <span class="=like-counter">
     {{likes}}
   </span>
 </div>
