--- a/src/app/like-widget/like-widget.component.html
+++ b/src/app/like-widget/like-widget.component.html
@@ -1,10 +1,21 @@
 <div class="like-widget-container"
+  (keyup.enter)="like()"
   (click)="like()"
 >
-  <fa-icon>
-    [icon]="fonts.faThumbsUp"
+  <fa-icon
+    role="button"
+    tabindex="0"
+    [attr.aria-describeby]="id"
+    size="1x"
+    [icon]="fonts.faThumbsUp">
   </fa-icon>
-  <span class="=like-counter">
+  <span
+    class="=like-counter"
+    [attr.id]="id"
+    [attr.aria-label]="likes + ': people liked'"
+    aria-live="true"
+    aria-atomic="true"
+  >
     {{likes}}
   </span>
 </div>
